fixed scrollbar

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -2,10 +2,7 @@
 * {
   box-sizing: border-box;
   scrollbar-width: thin;
-}
-
-::-webkit-scrollbar {
-  width: 0;
+  overflow-x: hidden;
 }
 
 html {
