--- a/client/src/components/explore/PostPage.module.scss
+++ b/client/src/components/explore/PostPage.module.scss
@@ -1,6 +1,7 @@
 @import "../../variables/variables";
 
 .wrapper {
+  @extend .hide-scrollbar;
   top: 0;
   left: 0;
   right: 0;
@@ -27,6 +28,7 @@
 }
 
 .user {
+  @extend .hide-scrollbar;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -41,6 +43,7 @@
 }
 
 .info {
+  @extend .hide-scrollbar;
   overflow: scroll;
   width: 100%;
   height: 100%;
