--- a/client/src/variables/variables.scss
+++ b/client/src/variables/variables.scss
@@ -1,7 +1,7 @@
 $title-font: "Dancing Script";
 $text-font: "Quicksand", sans-serif;
 $nav-white: rgb(255, 255, 255);
-$box-shadow: 0px 0px 20px 1px
+$box-shadow: 0px 0px 10px 1px
   rgba(
     $color: black,
     $alpha: 0.2,
@@ -109,4 +109,12 @@ $error: #ff8080;
   font-weight: 700;
   font-size: small;
   font-style: italic;
+}
+
+.hide-scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none; /* IE 11 */
+  scrollbar-width: none; /* Firefox 64 */
 }
